--- a/contacto.html
+++ b/contacto.html
@@ -20,10 +20,69 @@
 
     </nav>
 
+<div class="formulario">
+  <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdm8kM8l4Pp0DynCAgEwLM7wfKDHFNRaTGcXNUHupXwn3gZ9A/viewform?embedded=true" width="440" height="747" frameborder="0" marginheight="0" marginwidth="0">Cargando…</iframe>
 
+</div>
 
 
 </header>
+
+
+<footer>
+
+
+
+<div class="red">
+
+
+
+   <a href="https://www.facebook.com/" target="_blank"> <img class="face" src="./imagenes/facebook.png"></a>
+   <a href="https://www.instagram.com/" target="_blank"> <img class="face" src="./imagenes/instagram.png"></a>
+   <a href="https://www.twitter.com/" target="_blank"> <img class="face" src="./imagenes/twitter.png"></a>
+
+</div>
+
+<br>
+<br>
+<br>
+<br>
+<br>
+
+
+
+<div class="datos">
+
+
+
+
+<h4>Jorgelina Bravo</h4>
+<h4>jorgelina.bravo@hotmail.com</h4>
+<h4>Programadora Web</h4>
+
+</div>
+
+
+
+
+</footer>
+
+
+
+ <a href="https://api.whatsapp.com/send/?phone=5493413109668&text&type=phone_number&app_absent=0" target="_blank"> <img class="icono" src="./imagenes/whats.png"></a>
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
