--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 <link href="https://fonts.googleapis.com/css2?family=Rubik+80s+Fade&family=Rubik+Gemstones&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200&display=swap" rel="stylesheet">
     <title>Mitos y Leyendas de Argentina</title>
+  <script>
+  alert ("Bienvenidos!")
+    </script>
   </head>
 
   <body>
@@ -184,7 +187,9 @@ que iluminan con una luz distinta los hechos reales.</p>
 
 
 
+<script src="./js/javascrip.js">
 
+</script>
 <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
  </body>
